--- a/src/main/resources/templates/view/edit/dogEdit.html
+++ b/src/main/resources/templates/view/edit/dogEdit.html
@@ -1,7 +1,7 @@
 <th:block th:unless="${session.isEmpty()}">
     <script>
-        $(document).ready(function () {
-            $('#nav-link').click(function (e) {
+        $(document).ready(function() {
+            $('#nav-link').click(function(e){
                 e.preventDefault();
                 window.history.back();
             });
@@ -15,8 +15,8 @@
             });
         });
     </script>
-    <script src="/js/selectize.min.js"></script>
-    <link rel="stylesheet" href="/css/selectize.bootstrap3.min.css"/>
+    <script src="/js/selectize.min.js" ></script>
+    <link rel="stylesheet" href="/css/selectize.bootstrap3.min.css" />
 
     <th:block th:fragment xmlns:th="http://www.w3.org/1999/xhtml">
         <link href="/css/dp-light.css" rel="stylesheet">
@@ -37,15 +37,18 @@
                   th:object="${dogEditDTO}">
 
                 <div class="login-box">
-
-                    <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:auto">
+                    <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:500px">
                         <tbody>
                         <tr>
-                            <td><label class="file-label" for="fileImage">Add Image</label>
+                            <td><label class="file-label" for="fileImage">Image</label>
                                 <div class="mb-4">
                                     <input class="file-input" type="file" id="fileImage" name="fileImage">
                                 </div>
-                                <input type="hidden" name="imgName" th:value="${dogEditDTO.imageName}">
+
+
+                                <img src="#" id="thumbnail" height="80px" width="100px"
+                                     th:src="@{${'/image/' + dogEditDTO.imageName}}" alt="image" />
+                                <input type="hidden" name="imgName"  th:value="${dogEditDTO.imageName}"><br>
                             </td>
                         </tr>
                         </tbody>
@@ -54,15 +57,14 @@
                         <tbody>
                         <tr>
                             <td><label>Dog Name:</label><br>
-                                <input type="text" id="name" th:field="*{name}" placeholder="Please enter Name"/>
+                                <input type="text" id="name" th:field="*{name}" placeholder="Please enter Name" />
                                 <small th:if="${#fields.hasErrors('name')}"
                                        th:errors="*{name}"
                                        class="text-light form-text bg-danger "></small>
                                 <br>
                             </td>
                             <td><label>Weight:</label><br>
-                                <input type="text" id="description22" th:field="*{weight}"
-                                       placeholder="Please enter Weight"/>
+                                <input type="text" id="description22" th:field="*{weight}" placeholder="Please enter Weight" />
                                 <small th:if="${#fields.hasErrors('weight')}"
                                        th:errors="*{weight}"
                                        class="text-light form-text bg-danger "></small>
@@ -76,11 +78,11 @@
                         <tr>
                             <td><label>Breed:</label><br>
                                 <select required th:field="*{breed.id}" style="width: 196px">
-                                    <option value="">Please select</option>
+                                    <option value="">Please select </option>
                                     <option
                                             th:each="b : ${allBreeds}"
                                             th:value="${b.id}"
-                                            th:text="${b.breedName}"></option>
+                                            th:text="${b.breedName}" ></option>
 
                                 </select>
                             </td>
@@ -99,20 +101,17 @@
                     <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:auto">
                         <tbody>
                         <tr>
-                            <td>
-                            <td><label>BirthDate:</label><br>
-                                <div>
-                                    <input type="text" id="input1" th:field="*{birthDate}"
-                                           placeholder="Please enter BirthDate"/>
-                                    <small th:if="${#fields.hasErrors('birthDate')}"
-                                           th:errors="*{birthDate}"
-                                           class="text-light form-text bg-danger "></small>
-                                </div>
-                            </td>
+                            <td><td><label>BirthDate:</label><br>
+                            <div>
+                                <input  type="text" id="input1" th:field="*{birthDate}" placeholder="Please enter BirthDate"  />
+                                <small th:if="${#fields.hasErrors('birthDate')}"
+                                       th:errors="*{birthDate}"
+                                       class="text-light form-text bg-danger "></small>
+                            </div>
+                        </td>
                             <td><label>Last Deworming Date:</label><br>
                                 <div>
-                                    <input type="text" id="input2" th:field="*{lastDewormingDate}"
-                                           placeholder="Please enter Deworming"/>
+                                    <input  type="text" id="input2" th:field="*{lastDewormingDate}" placeholder="Please enter Deworming" />
                                     <small th:if="${#fields.hasErrors('lastDewormingDate')}"
                                            th:errors="*{lastDewormingDate}"
                                            class="text-light form-text bg-danger "></small>
@@ -143,13 +142,13 @@
                         <tbody>
                         <tr>
                             <td><label>Sex:</label><br>
-                                <select th:field="*{sex}" style="width: 77px">
+                                <select th:field="*{sex}"style="width: 77px" >
                                     <option value="M">M</option>
                                     <option value="F">F</option>
                                 </select>
                             </td>
                             <td><label>Passport:</label><br>
-                                <select th:field="*{passport}">
+                                <select th:field="*{passport}" >
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select>
@@ -160,14 +159,14 @@
                     <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:auto">
                         <tbody>
                         <tr>
-                            <td><label>Microchip:</label><br>
+                            <td ><label >Microchip:</label><br>
                                 <select th:field="*{microchip}" id="Microchip" onclick="show()">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select>
                             </td>
-                            <td id="description23"><label>Microchip Number:</label><br>
-                                <input type="text" th:field="*{microchipNumber}" placeholder="Please enter Number"/>
+                            <td id="description23"  ><label>Microchip Number:</label><br>
+                                <input  type="text"  th:field="*{microchipNumber}"  placeholder="Please enter Number" />
                             </td>
                         </tr>
                         </tbody>
@@ -189,22 +188,21 @@
             /* $(document).ready(function(){
 
             }); */
-            function showImageThumbnail(fileInput) {
-                if (fileInput.files && fileInput.files[0]) {
+            function showImageThumbnail(fileInput){
+                if(fileInput.files && fileInput.files[0]){
                     var reader = new FileReader();
 
-                    reader.onload = function (e) {
+                    reader.onload = function(e){
                         $('thumbnail').attr('src', e.target.result);
                     }
                     reader.readAsDataURL(fileInput.files[0]);
                 }
             }
-
-            $('#fileImage').change(function () {
+            $('#fileImage').change(function(){
                 showImageThumbnail(this);
             });
 
-            $('.file-input').on("change", function () {
+            $('.file-input').on("change", function(){
                 var fileName = $(this).val().split("\\").pop();
                 $(this).siblings(".file-label").addClass("selected").html(fileName);
             });
@@ -212,14 +210,15 @@
 
         <script>
             window.addEventListener("load", () => {
-                picker.attach({target: "input1"});
+                picker.attach({ target: "input1" });
             });
         </script>
         <script>
             window.addEventListener("load", () => {
-                picker.attach({target: "input2"});
+                picker.attach({ target: "input2" });
             });
         </script>
+
 
 
     </th:block>
