--- a/src/main/resources/templates/view/add/reservationAdd.html
+++ b/src/main/resources/templates/view/add/reservationAdd.html
@@ -41,7 +41,7 @@
                     <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:auto">
                         <tbody>
                         <tr>
-                            <td> <label><img align="center" src="#" height="20px" width="20px"
+                            <td> <label style="font-weight: bold"><img align="center" src="#" height="20px" width="20px"
                                              th:src="@{${'/pics/client.png'}}"> Client:</label><br>
                                 <select style="width:330px" required id="showClient" name="showClient" th:field="*{client.id}"
                                         onclick="getClientDogs()">
@@ -58,11 +58,11 @@
                                        class="text-light form-text bg-danger "></small></td>
                         </tr>
                         <tr>
-                            <td><label><img align="center" src="#" height="20px" width="20px"
+                            <td><label style="font-weight: bold"><img align="center" src="#" height="20px" width="20px"
                                             th:src="@{${'/pics/dog.png'}}"> Dog:</label><br>
                                 <select style="width:330px" id="dogsBox" name="dogsBox" th:field="*{dog.id}"   onclick="getCells()">
                                 </select><br>
-                                <label><img align="center" src="#" height="20px" width="20px"
+                                <label style="font-weight: bold"><img align="center" src="#" height="20px" width="20px"
                                             th:src="@{${'/pics/calendar.png'}}"> Date of Arrival:</label><br>
                                 <div>
                                     <input  type="text" id="input1" th:field="*{startDate}" placeholder="Date of Arrival"  />
@@ -73,7 +73,7 @@
                                 </td>
                         </tr>
                         <tr>
-                            <td><label><img align="center" src="#" height="20px" width="20px"
+                            <td><label style="font-weight: bold"><img align="center" src="#" height="20px" width="20px"
                                            th:src="@{${'/pics/calendar.png'}}"> Date of Departure:</label><br>
                                 <div>
                                     <input  type="text" id="input2" th:field="*{endDate}" placeholder="Date of Departure"  />
@@ -84,7 +84,7 @@
                                 </td>
                         </tr>
                         <tr>
-                            <td><label><img align="center" src="#" height="20px" width="20px"
+                            <td><label style="font-weight: bold"><img align="center" src="#" height="20px" width="20px"
                                             th:src="@{${'/pics/house.png'}}"> Dog House:</label><br>
                                 <select required id="cellsBox" name="cellsBox" th:field="*{cell}">
                                     <small th:if="${#fields.hasErrors('cell')}"
@@ -104,12 +104,12 @@
                     <table align="center" border="0" cellpadding="1" cellspacing="1" style="width: auto">
                         <tbody>
                         <tr>
-                            <td><label th:text="${'Feeding:'+ price.getPriceFood()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Feeding:'+ price.getPriceFood()+'$'}"></label><br>
                                 <select th:field="*{food}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select><br></td>
-                            <td><label th:text="${'Deworming: '+ price.getPriceDeworming()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Deworming: '+ price.getPriceDeworming()+'$'}"></label><br>
                                 <select th:field="*{deworming}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
@@ -117,12 +117,12 @@
 
                         </tr>
                         <tr>
-                            <td><label th:text="${'Training: '+ price.getPriceTraining()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Training: '+ price.getPriceTraining()+'$'}"></label><br>
                                 <select th:field="*{training}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select><br></td>
-                            <td><label th:text="${'Bathing: '+ price.getPriceBathing()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Bathing: '+ price.getPriceBathing()+'$'}"></label><br>
                                 <select th:field="*{bathing}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
@@ -130,24 +130,24 @@
 
                         </tr>
                         <tr>
-                            <td><label th:text="${'Еar cleaning: '+ price.getPriceEars()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Еar cleaning: '+ price.getPriceEars()+'$'}"></label><br>
                                 <select th:field="*{ears}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select><br></td>
-                            <td><label th:text="${'Paws cleaning: '+ price.getPricePaws()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Paws cleaning: '+ price.getPricePaws()+'$'}"></label><br>
                                 <select th:field="*{paws}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select><br></td>
                         </tr>
                         <tr>
-                            <td><label th:text="${'Nails trimming: '+ price.getPriceNails()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Nails trimming: '+ price.getPriceNails()+'$'}"></label><br>
                                 <select th:field="*{nails}"><br>
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
                                 </select><br></td>
-                            <td><label th:text="${'Combing: '+ price.getPriceCombing()+'$'}"></label><br>
+                            <td><label style="font-weight: bold" th:text="${'Combing: '+ price.getPriceCombing()+'$'}"></label><br>
                                 <select th:field="*{combing}">
                                     <option value="NO">NO</option>
                                     <option value="YES">YES</option>
@@ -155,9 +155,9 @@
                         </tr>
                         </tbody>
                     </table>
-                    <label><img align="center" src="#" height="20px" width="20px"
+                    <label style="font-weight: bold"><img align="center" src="#" height="20px" width="20px"
                                 th:src="@{${'/pics/discount.png'}}"> Discount: max - 20%</label><br>
-                    <input type="text" style="width: 50px" id="description22" th:field="*{discount}"/><br>
+                    <input type="text" style="width: 50px" id="description22" th:field="*{discount}" placeholder="0"/><br>
 
                 </div>
                 <br>
