--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -668,11 +668,25 @@ a, a:hover {
 
 }
 
-.table-responsive {
+.modal-body {
     min-height: .01%;
-    overflow-x: auto;
 }
 
+@media screen and (max-width: 560px) {
+    .modal-body {
+        font-size: 13px;
+        display: block;
+        width:100%;
+        max-width: 100%;
+        background-color: transparent;
+        border-collapse: collapse;
+        border-spacing: 0;
+        color: #353838;
+        text-align: center;
+        padding: 0.5rem;
+        white-space: pre-line;
+    }
+}
 @media screen and (max-width: 560px) {
     .table-responsive {
         font-size: 12px;
@@ -702,6 +716,8 @@ a, a:hover {
         white-space: nowrap;
     }
 }
+
+
 
 .table-responsive-dog {
     min-height: .01%;
