--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,14 +33,14 @@
                 <tbody>
 
                 <td>
-                    <p1>Admin Role:</p1>
+                    <p1 class="welcome">Admin Role:</p1>
                     <br>
                     <p1>username : owner</p1>
                     <br>
                     <p1>password : owner</p1>
                     <br>
                     <p></p>
-                    <p1>User Role:</p1>
+                    <p1 class="welcome">User Role:</p1>
                     <br>
                     <p1>username : employee</p1>
                     <br>
@@ -60,7 +60,39 @@
 
                 </tbody>
             </table>
-            <br>
+            <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:300px">
+                <tbody>
+                <br>
+                <p></p>
+                <td>
+                    <p1 class="welcome">REST API - only GET:</p1>
+                    <br>
+                    <span>Clients :
+                        <a href="/api/clients">
+                            api/clients</a></span><br>
+                    <span>Dogs :
+                        <a href="/api/dogs">
+                            api/dogs</a></span><br>
+                    <span>Reservations :
+                        <a href="/api/reservations">
+                            api/reservations</a></span><br>
+                    <span>Invoices :
+                        <a href="/api/invoices">
+                            api/invoices</a></span><br>
+                    <span>Prices :
+                        <a href="/api/prices">
+                           api/prices</a></span><br>
+                    <span>Vendors :
+                        <a href="/api/vendors">
+                           api/vendors</a></span><br>
+                    <span>Costs :
+                        <a href="/api/costs">
+                           api/costs</a></span><br>
+                    </td>
+
+
+                </tbody>
+            </table>
             <br>
         </div>
     </th:block>
